--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/milos__trifunovic/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/MilosTrf" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/TrifunovicMilos" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -131,12 +131,12 @@
 										<h2><a>Project in C++<br />
 										Battleship</a></h2>
 									</header>
-									<a class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a class="image fit"><img src="images/battleship.jpeg" alt="" /></a>
 									<p>This was a simpler game, playable from the command line, implemented by me and two other people
 										in C++ for the programming laboratory course.</p>
-									<ul class="actions special">
+					           <!-- <ul class="actions special">
 										<li><a href="images/battleship_more.jpg" target="_blank" class="button">See more</a></li>
-									</ul>
+									</ul> -->
 								</article>
 							</section>
 							<section class="posts">
@@ -184,7 +184,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.instagram.com/milos__trifunovic/" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/MilosTrf" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/TrifunovicMilos" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
