added contact links

--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a>+39 3385650905</a></p>
+								<p><a href="tel:+39 3385650905">+39 3385650905</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a>milostrifunovic02@yahoo.it</a></p>
+								<p><a href="mailto:milostrifunovic02@yahoo.it">milostrifunovic02@yahoo.it</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
