adjustments for Mobile

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							<article class="post featured" id="aboutme">
 								<header class="major">
 									<h2><a>About Me</a></h2>
-									<p>University student pursuing a degree in Computer Engineering.<br />
-									Sport enthusiast, I played football for 10 years and I am a black belt in karate.<br />
+									<p>University student pursuing a degree in Computer Engineering.<!-- <br> -->
+									Sport enthusiast, I played football for 10 years and I am a black belt in karate. <!-- <br> -->
 									As a hobby I play basketball too. I love watching tennis, can't play it tho.</p>
 								</header>
 								<!-- <li><a href="#" class="button large">Biography</a></li> -->
@@ -67,7 +67,8 @@
 								</header>								
 								<a href="https://www.dei.unipd.it/home-page" target="_blank" class="image fit"><img src="images/unipd.png" alt="" /></a>
 								<p>I'm in my third year of the Bachelor's degree in <br> Computer Engineering.
-									I've passed courses such as <br>Mathematical Analysis, Physics, Software Engineering, Data Structures and Algorithms, and so on.<br>
+									I've passed courses such as <!-- <br> -->
+									Mathematical Analysis, Physics, Software Engineering, Data Structures and Algorithms, and so on.<!-- <br> -->
 									My GPA is 28.8/30.</p>
 								<ul class="actions special">
 									<li><a href="https://www.unipd.it/" target="_blank" class="button">Unipd</a></li>
@@ -80,8 +81,11 @@
 									<a href="https://www.fogazzaro.edu.it/pagine/liceo-scientificodelle-scienze-applicate" target="_blank">Scientific Studies</a></h2>
 								</header>
 								<a href="https://www.fogazzaro.edu.it/" target="_blank" class="image fit"><img src="images/fogazzaro.jpg" target="_blank" alt="" /></a>
-								<p>Here I pleasantly spent five years of my life. <br> It's a high school located in my hometown Vicenza <br> where I acquired a pretty good foundation 
-									which has been essential for my current university studies. <br> I graduated with 98/100.</p>
+								<p>Here I pleasantly spent five years of my life. <!-- <br> --> 
+									It's a high school located in my hometown Vicenza <!-- <br> -->
+									where I acquired a pretty good foundation 
+									which has been essential for my current university studies.<!-- <br> -->
+									I graduated with 98/100.</p>
 								<ul class="actions special">
 									<li><a href="https://www.fogazzaro.edu.it/" target="_blank" class="button">Fogazzaro</a></li>
 								</ul>
@@ -106,10 +110,11 @@
 									<h2><a>languages<br /></a></h2>
 								</header>
 								<a class="image fit"><img src="images/flags.png" alt="" /></a>
-								<p>I'm a native Italian and Serbian speaker. <br>
+								<p>I'm a native Italian and Serbian speaker. <!-- <br> -->
 								I have a B2 level of proficiency in English.
-								When I watch <br> movies or TV series, I do it in English. A significant portion of the things I watch and read is in English. <br>
-								I also have a very rudimentary understanding of French. <br>I studied it for three years in middle school, <br>but that was eight years ago.</p>
+								When I watch <br> movies or TV series, I do it in English. A significant portion of the things I watch and read is in English. <!-- <br> -->
+								I also have a very rudimentary understanding of French.<!-- <br> -->
+								I studied it for three years in middle school, <!-- <br> -->but that was eight years ago.<!-- <br> -->
 							</article>
 						</section>
 							<section class="posts" id="projects">
@@ -145,10 +150,10 @@
 										<h2><a>Instagram page<br />
 										sport news</a></h2>
 									</header>
-									<p>I used to manage an Instagram page related to sports. <br>
+									<p>I used to manage an Instagram page related to sports. <!-- <br> -->
 										I reached approximately 7,400 followers in a year and a half. 
-										This page brought me a lot of satisfaction. <br>
-										A certain Novak Djokovic viewed my stories three times. <br>
+										This page brought me a lot of satisfaction. <!-- <br> -->
+										A certain Novak Djokovic viewed my stories three times. <!-- <br> -->
 										I also received some DMs from a footballer with 200k followers, thanking me for the support because I was posting about him, and probably I was the only one doing so. 
 										My posts were in Serbian, which is a language that people from Croatia, Bosnia, and Montenegro also understand. 
 										I was posting about all the athletes from the Balkans, so my followers were not all from Serbia; only 40% were. 
