--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 											Computer Engineering</a></h2>
 								</header>								
 								<a href="https://www.dei.unipd.it/home-page" target="_blank" class="image fit"><img src="images/unipd.png" alt="" /></a>
-								<p>I'm in my third year of the Bachelor's degree in <br> Computer Engineering.
+								<p>I'm in my third year of the Bachelor's degree in <!-- <br> --> Computer Engineering.
 									I've passed courses such as <!-- <br> -->
 									Mathematical Analysis, Physics, Software Engineering, Data Structures and Algorithms, and so on.<!-- <br> -->
 									My GPA is 28.8/30.</p>
