--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								</header>
 									<a class="image fit"><img src="images/skills.png" alt="" height="450" /></a>
 								<p>
-									<br>-Programming: Java, C++, Python
+									<br>-Programming: Java, C++, Python(basic)
 									<br>-Teamwork
 									<br>-Project management
 									<br>-Problem solving
