--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 						<section class="split contact">
 							<section class="alt" id="contact">
 								<h3>Address</h3>
-								<p>Via Quinto Rubini 8<br />
-								Vicenza, 36100</p>
+								<p><a href="https://www.google.com/maps/place/Via+Lucia+Quinto+Rubini,+36100+Vicenza+VI/" target="_blank">Via Quinto Rubini 8</a> 
+									<br> <a href="https://www.google.com/maps/place/36100+Vicenza+VI/" target="_blank">Vicenza, 36100</a></p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -197,7 +197,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Milos</li> <!-- <li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul> -->
+						<ul><li>&copy; 2023 Milos Trifunovic</li> <!-- <li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul> -->
 					</div>
 
 			</div>
