--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 								<header>
 									<h2><a>skills<br /></a></h2>
 								</header>
-									<a class="image fit"><img src="images/skills.png" alt="" height="450" /></a>
+									<a class="image fit"><img src="images/skills.png" alt="" /></a>
 								<p>
 									<br>-Programming: Java, C++, Python(basic)
 									<br>-Teamwork
@@ -157,7 +157,7 @@
 										I also received some DMs from a footballer with 200k followers, thanking me for the support because I was posting about him, and probably I was the only one doing so. 
 										My posts were in Serbian, which is a language that people from Croatia, Bosnia, and Montenegro also understand. 
 										I was posting about all the athletes from the Balkans, so my followers were not all from Serbia; only 40% were. 
-										I eventually stopped posting and temporarily deactivated the page to prevent losing followers. <br>
+										I eventually stopped posting and temporarily deactivated the page to prevent losing followers. <!-- <br> -->
 										I may reactivate it again; who knows?
 									<ul class="actions special"></ul>
 									</ul>
