--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
 								</header>
 									<a class="image fit"><img src="images/skills.png" alt="" /></a>
 								<p>
-									<br>-Programming: Java, C++, Python(basic)
-									<br>-Teamwork
-									<br>-Project management
-									<br>-Problem solving
-									<br>-Analytical skills
+									<ul>
+									    <li>-Programming: Java, C++, Python(basic)</li>
+									    <li>Teamwork</li>
+									    <li>Project management</li>
+									    <li>Problem solving</li>
+									    <li>Analytical skills</li>
+									</ul>
 								</p>
 							</article>
 							<article>
@@ -160,7 +162,6 @@
 										I eventually stopped posting and temporarily deactivated the page to prevent losing followers. <!-- <br> -->
 										I may reactivate it again; who knows?
 									<ul class="actions special"></ul>
-									</ul>
 								</article>
 								<article>
 									<a class="image fit"><img src="images/instapage1.png" alt="" /></a>
