--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 								</header>
 									<a class="image fit"><img src="images/skills.png" alt="" /></a>
 								<p>
-									<ul>
-									    <li>-Programming: Java, C++, Python(basic)</li>
+									<ul style="text-align: left;">
+									    <li>Programming: Java, C++, Python(basic)</li>
 									    <li>Teamwork</li>
 									    <li>Project management</li>
 									    <li>Problem solving</li>
