--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 								</ul>
 							</article>
 						</section>
-						<section class="posts" id="skills">
+						<section class="posts">
 							<article>
 								<header>
 									<h2><a>skills<br /></a></h2>
 								</header>
-									<a class="image fit"><img src="images/skills.png" alt="" /></a>
+									<a class="image fit"><img src="images/skills.png" alt="" style="max-height: 480px;" /></a>
 								<p>
 									<ul style="text-align: left;">
 									    <li>Programming: Java, C++, Python(basic)</li>
