--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							<section class="posts" id="projects">
 								<article>
 									<header>
-										<h2><a href="https://github.com/nickramos94/Klotski" target="_blank">Project in Java<br />
+										<h2><a href="https://github.com/nickramos94/Klotski" target="_blank">Project in Java<br>
 										"Klotski"</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/klotski.png" alt="" /></a>
@@ -135,7 +135,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a>Project in C++<br />
+										<h2><a>Project in C++<br>
 										Battleship</a></h2>
 									</header>
 									<a class="image fit"><img src="images/battleship.jpeg" alt="" /></a>
@@ -149,8 +149,8 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a>Instagram page<br />
-										sport news</a></h2>
+										<h2><a>Instagram page<br>
+										Sport News</a></h2>
 									</header>
 									<p>I used to manage an Instagram page related to sports. <!-- <br> -->
 										I reached approximately 7,400 followers in a year and a half. 
