--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 								<a class="image fit"><img src="images/flags.png" alt="" /></a>
 								<p>I'm a native Italian and Serbian speaker. <!-- <br> -->
 								I have a B2 level of proficiency in English.
-								When I watch <br> movies or TV series, I do it in English. A significant portion of the things I watch and read is in English. <!-- <br> -->
+								When I watch movies or TV series, I do it in English. A significant portion of the things I watch and read is in English. <!-- <br> -->
 								I also have a very rudimentary understanding of French.<!-- <br> -->
 								I studied it for three years in middle school, <!-- <br> -->but that was eight years ago.<!-- <br> -->
 							</article>
