adapting for all devices

--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
 						<!-- Posts -->
 						<section class="posts" id="education">
 							<article>
-								<header>
 									<span class="date">semptember 2021 - now</span>
-									<h2><a href="https://www.unipd.it/" target="_blank">University of Padova</a><br />
+									<h2>
+										<a href="https://www.unipd.it/" target="_blank">University of Padova</a><br>
 										<a href="https://www.unipd.it/offerta-didattica/corso-di-laurea/ingegneria?tipo=L&scuola=IN&ordinamento=2020&key=IN0508&cg=scienze" target="_blank">
-											Computer Engineering</a></h2>
-								</header>								
+										Computer Engineering
+									    </a>
+								    </h2>							
 								<a href="https://www.dei.unipd.it/home-page" target="_blank" class="image fit"><img src="images/unipd.png" alt="" /></a>
 								<p>I'm in my third year of the Bachelor's degree in <!-- <br> --> Computer Engineering.
 									I've passed courses such as <!-- <br> -->
@@ -75,11 +76,11 @@
 								</ul>
 							</article>
 							<article>
-								<header>
 									<span class="date">september 2016 - june 2021</span>
-									<h2><a href="https://www.fogazzaro.edu.it/" target="_blank">Liceo Fogazzaro</a><br />
-									<a href="https://www.fogazzaro.edu.it/pagine/liceo-scientificodelle-scienze-applicate" target="_blank">Scientific Studies</a></h2>
-								</header>
+									<h2>
+										<a href="https://www.fogazzaro.edu.it/" target="_blank">Liceo Fogazzaro</a><br>
+									    <a href="https://www.fogazzaro.edu.it/pagine/liceo-scientificodelle-scienze-applicate" target="_blank">Scientific Studies</a>
+								    </h2>
 								<a href="https://www.fogazzaro.edu.it/" target="_blank" class="image fit"><img src="images/fogazzaro.jpg" target="_blank" alt="" /></a>
 								<p>Here I pleasantly spent five years of my life. <!-- <br> --> 
 									It's a high school located in my hometown Vicenza <!-- <br> -->
@@ -94,7 +95,7 @@
 						<section class="posts">
 							<article>
 								<header>
-									<h2><a>skills<br /></a></h2>
+									<h2><a>Skills</a></h2>
 								</header>
 									<a class="image fit"><img src="images/skills.png" alt="" style="max-height: 480px;" /></a>
 								<p>
@@ -109,7 +110,7 @@
 							</article>
 							<article>
 								<header>
-									<h2><a>languages<br /></a></h2>
+									<h2><a>Languages<br></a></h2>
 								</header>
 								<a class="image fit"><img src="images/flags.png" alt="" /></a>
 								<p>I'm a native Italian and Serbian speaker. <!-- <br> -->
@@ -121,10 +122,9 @@
 						</section>
 							<section class="posts" id="projects">
 								<article>
-									<header>
-										<h2><a href="https://github.com/nickramos94/Klotski" target="_blank">Project in Java<br>
-										"Klotski"</a></h2>
-									</header>
+										<h2>
+											<a href="https://github.com/nickramos94/Klotski" target="_blank">Project in Java<br>"Klotski"</a>
+										</h2>
 									<a href="#" class="image fit"><img src="images/klotski.png" alt="" /></a>
 									<p>This application was developed by me and three other people for the software engineering course. 
 										The code was written in Java but it wasn't just about implementation.
@@ -134,10 +134,9 @@
 									</ul>
 								</article>
 								<article>
-									<header>
-										<h2><a>Project in C++<br>
-										Battleship</a></h2>
-									</header>
+										<h2>
+											<a>Project in C++<br>Battleship</a>
+										</h2>
 									<a class="image fit"><img src="images/battleship.jpeg" alt="" /></a>
 									<p>This was a simpler game, playable from the command line, implemented by me and two other people
 										in C++ for the programming laboratory course.</p>
@@ -148,10 +147,9 @@
 							</section>
 							<section class="posts">
 								<article>
-									<header>
-										<h2><a>Instagram page<br>
-										Sport News</a></h2>
-									</header>
+										<h2>
+											<a>Instagram Page <br> Sport News</a>
+										</h2>
 									<p>I used to manage an Instagram page related to sports. <!-- <br> -->
 										I reached approximately 7,400 followers in a year and a half. 
 										This page brought me a lot of satisfaction. <!-- <br> -->
@@ -161,7 +159,9 @@
 										I was posting about all the athletes from the Balkans, so my followers were not all from Serbia; only 40% were. 
 										I eventually stopped posting and temporarily deactivated the page to prevent losing followers. <!-- <br> -->
 										I may reactivate it again; who knows?
+									</p>
 									<ul class="actions special"></ul>
+									
 								</article>
 								<article>
 									<a class="image fit"><img src="images/instapage1.png" alt="" /></a>
