--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								</ul>
 							</article>
 						</section>
-						<section class="posts">
+						<section class="posts" id="skills">
 							<article>
 								<header>
 									<h2><a>Skills</a></h2>
