--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Milos</a>
+						<a class="logo">Milos</a>
 					</header>
 
 				<!-- Nav -->
