--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 										<h2>
 											<a href="https://github.com/nickramos94/Klotski" target="_blank">Project in Java<br>"Klotski"</a>
 										</h2>
-									<a href="#" class="image fit"><img src="images/klotski.png" alt="" /></a>
+									<a href="https://github.com/nickramos94/Klotski" target="_blank" class="image fit"><img src="images/klotski.png" alt="" /></a>
 									<p>This application was developed by me and three other people for the software engineering course. 
 										The code was written in Java but it wasn't just about implementation.
 										The project also included requirements specification, design and testing.</p>
