added LinkedIn and CV

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a class="logo">Milos</a>
+						<a href="index.html" class="logo">Milos</a>
 					</header>
 
 				<!-- Nav -->
@@ -39,6 +39,7 @@
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/milos__trifunovic/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/TrifunovicMilos" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/milos-trifunovic-08727829b/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>			
 						</ul>
 					</nav>
 
@@ -53,7 +54,10 @@
 									Sport enthusiast, I played football for 10 years and I am a black belt in karate. <!-- <br> -->
 									As a hobby I play basketball too. I love watching tennis, can't play it tho.</p>
 								</header>
-								<!-- <li><a href="#" class="button large">Biography</a></li> -->
+								<ul class="actions special">
+									<li><a href="CV/CV_Italian.pdf" target="_blank" class="button large">CV (Italian version)</a></li>
+									<li><a href="CV/CV_English.pdf" target="_blank" class="button large">CV (English version)</a></li>
+								</ul>
 							</article>
 
 						<!-- Posts -->
@@ -92,7 +96,7 @@
 								</ul>
 							</article>
 						</section>
-						<section class="posts" id="skills">
+						<section class="posts">
 							<article>
 								<header>
 									<h2><a>Skills</a></h2>
@@ -125,7 +129,7 @@
 										<h2>
 											<a href="https://github.com/nickramos94/Klotski" target="_blank">Project in Java<br>"Klotski"</a>
 										</h2>
-									<a href="https://github.com/nickramos94/Klotski" target="_blank" class="image fit"><img src="images/klotski.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/klotski.png" alt="" /></a>
 									<p>This application was developed by me and three other people for the software engineering course. 
 										The code was written in Java but it wasn't just about implementation.
 										The project also included requirements specification, design and testing.</p>
@@ -191,6 +195,7 @@
 								<ul class="icons alt">
 									<li><a href="https://www.instagram.com/milos__trifunovic/" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/TrifunovicMilos" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/milos-trifunovic-08727829b/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</section>
 						</section>
