--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2><a>About Me</a></h2>
 									<p>University student pursuing a degree in Computer Engineering.<!-- <br> -->
 									Sport enthusiast, I played football for 10 years and I am a black belt in karate. <!-- <br> -->
-									As a hobby I play basketball too. I love watching tennis, can't play it tho.</p>
+									As a hobby I play basketball too. I love watching tennis, can't play it thought.</p>
 								</header>
 								<ul class="actions special">
 									<li><a href="CV/CV_Italian.pdf" target="_blank" class="button large">CV (Italian version)</a></li>
