--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
 									    <a href="https://www.fogazzaro.edu.it/pagine/liceo-scientificodelle-scienze-applicate" target="_blank">Scientific Studies</a>
 								    </h2>
 								<a href="https://www.fogazzaro.edu.it/" target="_blank" class="image fit"><img src="images/fogazzaro.jpg" target="_blank" alt="" /></a>
-								<p>Here I pleasantly spent five years of my life. <!-- <br> --> 
-									It's a high school located in my hometown Vicenza <!-- <br> -->
+								<p>
+									Here I pleasantly spent five years of my life. <!-- <br> --> 
+									It's a high school located in my hometown Vicenza, <!-- <br> -->
 									where I acquired a pretty good foundation 
 									which has been essential for my current university studies.<!-- <br> -->
-									I graduated with 98/100.</p>
+									I graduated with a score of 98/100.
+								</p>
 								<ul class="actions special">
 									<li><a href="https://www.fogazzaro.edu.it/" target="_blank" class="button">Fogazzaro</a></li>
 								</ul>
@@ -119,11 +121,13 @@
 									<h2><a>Languages<br></a></h2>
 								</header>
 								<a class="image fit"><img src="images/flags.png" alt="" /></a>
-								<p>I'm a native Italian and Serbian speaker. <!-- <br> -->
-								I have a B2 level of proficiency in English.
-								When I watch movies or TV series, I do it in English. A significant portion of the things I watch and read is in English. <!-- <br> -->
-								I also have a very rudimentary understanding of French.<!-- <br> -->
-								I studied it for three years in middle school, <!-- <br> -->but that was eight years ago.<!-- <br> -->
+								<p>
+									I'm a native Italian and Serbian speaker. <!-- <br> -->
+								        I have a B2 level of proficiency in English.
+								        When I watch movies or TV series, I do it in English. A significant portion of the things I watch and read is in English. <!-- <br> -->
+								        I also have a very rudimentary understanding of French.<!-- <br> -->
+								        I studied it for three years in middle school, <!-- <br> -->but that was eight years ago.<!-- <br> -->
+								</p>
 							</article>
 						</section>
 							<section class="posts" id="projects">
@@ -132,9 +136,11 @@
 											<a href="https://github.com/nickramos94/Klotski" target="_blank">Project in Java<br>"Klotski"</a>
 										</h2>
 									<a href="https://github.com/nickramos94/Klotski" target="_blank" class="image fit"><img src="images/klotski.png" alt="" /></a>
-									<p>This application was developed by me and three other people for the software engineering course. 
+									<p>
+										This application was developed by me and three other people for the software engineering course. 
 										The code was written in Java but it wasn't just about implementation.
-										The project also included requirements specification, design and testing.</p>
+										The project also included requirements specification, design and testing.
+									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/nickramos94/Klotski" target="_blank" class="button">GitHub Repository</a></li>
 									</ul>
@@ -144,8 +150,10 @@
 											<a>Project in C++<br>Battleship</a>
 										</h2>
 									<a class="image fit"><img src="images/battleship.jpeg" alt="" /></a>
-									<p>This was a simpler game, playable from the command line, implemented by me and two other people
-										in C++ for the programming laboratory course.</p>
+									<p>
+										This was a simpler game, playable from the command line, implemented by me and two other people
+										in C++ for the programming laboratory course.
+									</p>
 					           <!-- <ul class="actions special">
 										<li><a href="images/battleship_more.jpg" target="_blank" class="button">See more</a></li>
 									</ul> -->
@@ -156,7 +164,8 @@
 										<h2>
 											<a>Instagram Page <br> Sport News</a>
 										</h2>
-									<p>I used to manage an Instagram page related to sports. <!-- <br> -->
+									<p>
+										I used to manage an Instagram page related to sports. <!-- <br> -->
 										I reached approximately 7,400 followers in a year and a half. 
 										This page brought me a lot of satisfaction. <!-- <br> -->
 										A certain Novak Djokovic viewed my stories three times. <!-- <br> -->
