--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								<p>
 									I'm a native Italian and Serbian speaker. <!-- <br> -->
 								        I have a B2 level of proficiency in English.
-								        When I watch movies or TV series, I do it in English. A significant portion of the things I watch and read is in English. <!-- <br> -->
+								        When I watch movies or TV series, I do it in English. A significant portion of the things I watch and read are in English. <!-- <br> -->
 								        I also have a very rudimentary understanding of French.<!-- <br> -->
 								        I studied it for three years in middle school, <!-- <br> -->but that was eight years ago.<!-- <br> -->
 								</p>
@@ -139,7 +139,7 @@
 									<p>
 										This application was developed by me and three other people for the software engineering course. 
 										The code was written in Java but it wasn't just about implementation.
-										The project also included requirements specification, design and testing.
+										The project also included requirements specification, design, and testing.
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/nickramos94/Klotski" target="_blank" class="button">GitHub Repository</a></li>
@@ -169,7 +169,7 @@
 										I reached approximately 7,400 followers in a year and a half. 
 										This page brought me a lot of satisfaction. <!-- <br> -->
 										A certain Novak Djokovic viewed my stories three times. <!-- <br> -->
-										I also received some DMs from a footballer with 200k followers, thanking me for the support because I was posting about him, and probably I was the only one doing so. 
+										I also received some DMs from a footballer, thanking me for the support because I was posting about him. 
 										My posts were in Serbian, which is a language that people from Croatia, Bosnia, and Montenegro also understand. 
 										I was posting about all the athletes from the Balkans, so my followers were not all from Serbia; only 40% were. 
 										I eventually stopped posting and temporarily deactivated the page to prevent losing followers. <!-- <br> -->
