--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<p>I'm in my third year of the Bachelor's degree in <!-- <br> --> Computer Engineering.
 									I've passed courses such as <!-- <br> -->
 									Mathematical Analysis, Physics, Software Engineering, Data Structures and Algorithms, and so on.<!-- <br> -->
-									My GPA is 28.8/30.</p>
+									My GPA is 28.5/30.</p>
 								<ul class="actions special">
 									<li><a href="https://www.unipd.it/" target="_blank" class="button">Unipd</a></li>
 								</ul>
@@ -107,7 +107,7 @@
 									<a class="image fit"><img src="images/skills.png" alt="" style="max-height: 480px;" /></a>
 								<p>
 									<ul style="text-align: left;">
-									    <li>Programming: Java, C++, Python(basic)</li>
+									    <li>Languages: SQL, Java, C++, Python(basic)</li>
 									    <li>Teamwork</li>
 									    <li>Project management</li>
 									    <li>Problem solving</li>
