--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<p>
 									   University student pursuing a degree in Computer Engineering.
 									   Sport enthusiast; I played football for 10 years, and I am a black belt in karate.
-									   As a hobby, I play basketball too. I love watching tennis, I can't play it thought.
+									   As a hobby, I play basketball too. I love watching tennis, I can't play it though.
 									</p>
 								</header>
 								<ul class="actions special">
