--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section class="split contact">
-							<section class="alt" id="contact">
+						<!--   <section class="alt" id="contact">
 								<h3>Address</h3>
 								<p><a href="https://www.google.com/maps/place/Via+Lucia+Quinto+Rubini,+36100+Vicenza+VI/" target="_blank">Via Quinto Rubini 8</a> 
 									<br> <a href="https://www.google.com/maps/place/36100+Vicenza+VI/" target="_blank">Vicenza, 36100</a></p>
-							</section>
+							</section> --->
 							<section>
 								<h3>Phone</h3>
 								<p><a href="tel:+39 3385650905">+39 3385650905</a></p>
